# alternative_credit_scoring

./: .env.template  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  PROJECT_ROADMAP.md  QWEN.md  README.md  docker-compose.override.yml  docker-compose.yml  mlflow.db  pre-commit-config.yaml  pyproject.toml  requirements.txt
.docs/: .env.template
.github/workflows/: cd.yml  ci.yml
configs/: model_config.yaml
dags/: ml_pipeline_dag.py  monitoring_dag.py  training_pipeline_dag.py
docker/: Dockerfile.airflow
docs/: GETTING_STARTED.md  api.md  architecture.md  demo-guide.md  deployment.md  evaluation.md  index.md  portfolio-pitch.md  repository-structure.md  tech-decisions.md
docs/api/: spec.md
docs/architecture/: components.md  data-flow.md  index.md  technology-stack.md
docs/data/: dataset.md  features.md  index.md  quality-and-versioning.md
docs/mlops/: ci-cd.md  experiment-tracking.md  index.md  model-serving.md  monitoring.md
docs/model/: development.md  evaluation.md  index.md  interpretability.md
docs/project_management/: todo.md
grafana/: dashboard.json
notebooks/: 01_exploratory_data_analysis.ipynb  01_exploratory_data_analysis_executed.ipynb
prometheus/: alert.rules.yml  alertmanager.yml  prometheus.yml
scripts/: create_reference_dataset.py  download_dataset.py  make_dataset.py  run_baseline_model.py  stream_data_producer.py  wait-for-services.sh
src/api/: __init__.py  main.py  model_loader.py  models.py  redis_client.py
src/data/: __init__.py  cleaning.py  features.py  versioning.py
src/models/: __init__.py  evaluate.py  fairness.py  hyperparameter_tuning.py  register.py  train.py
src/monitoring/: drift_detection.py  monitor_predictions.py  validate_data.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/api/: test_lifespan_and_initialization.py  test_main.py
tests/data/: test_cleaning.py
tests/integration/: test_api.py
