[project]
name = "credit-scoring"
version = "0.1.0"
description = "Alternative Credit Scoring Platform"
authors = [
    {name = "befikadusata",email = "befikadusata@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "papermill (>=2.6.0,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
