[project]
name = "credit-scoring"
version = "0.1.0"
description = "Alternative Credit Scoring Platform"
authors = [
    {name = "befikadusata",email = "befikadusata@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "papermill (>=2.6.0,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "fastapi (>=0.123.9,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "json-logger (>=0.0.1,<0.0.2)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "boto3 (>=1.42.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E501",  # Line too long - handled by Black
    "W503",  # Line break occurred before a binary operator - conflicts with Black
    "E402",  # Module level import not at top of file - needed for scripts with local imports
]
